# iris-blocks

./: .gitignore  Cargo.toml  LICENSE  PR_CLEAN_CHECKLIST.md  README.md  agent.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
docs/: L4_RFC.md  SCHEMA.md
migrations/sqlite/2026-03-11-000000_l0/: down.sql  up.sql
migrations/sqlite/2026-03-11-000001_l1/: down.sql  up.sql
migrations/sqlite/2026-03-11-000002_l2/: down.sql  up.sql
migrations/sqlite/2026-03-11-000003_l3/: down.sql  up.sql
migrations/sqlite/2026-03-11-000004_l4/: down.sql  up.sql
migrations/sqlite/2026-03-11-000005_l4_coinbase/: down.sql  up.sql
migrations/sqlite/2026-03-12-000006_l4_v0pk/: down.sql  up.sql
nix/: default.nix
scripts/: nix-wasm-clang-source.sh  repl.ts  v0pk_verify.sql  wallet_diagnostics.sql
src/: address.rs  chain_activations.rs  cli.rs  db.rs  lib.rs  main.rs  query.rs  rt.rs  scry.rs  sqlite_raw.rs  wasm.rs
src/accounting/: address.rs  mod.rs  query.rs
src/cli/: audit.rs  balance.rs  block.rs  mod.rs  names.rs  status.rs  sync.rs  tx.rs  verify_balance.rs
src/layers/: layer.rs  mod.rs  shared_schema.rs
src/layers/l0/: block_range_manager.rs  mod.rs  schema.rs
src/layers/l1/: mod.rs  schema.rs
src/layers/l2/: mod.rs  schema.rs
src/layers/l3/: mod.rs  schema.rs
src/layers/l4/: mod.rs  schema.rs
web_sample/: index.html  serve.html  terminal.js  worker.js
