cargo-features = ["profile-rustflags"]

[package]
name = "iris-blocks"
version = "0.1.0"
edition = "2021"
keywords = ["nockchain", "iris", "wallet", "nock"]
license = "MIT"
repository = "https://github.com/nockbox/iris-blocks"
rust-version = "1.88.0"
description = "Block parser and accompanying utils for iris"
documentation = "https://docs.rs/iris-blocks"
homepage = "https://nockbox.org"
authors = ["NockBox inc. <tech@nockbox.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "iris-blocks"
path = "src/main.rs"
required-features = ["binary"]

[dependencies]
iris-ztd = { git = "https://github.com/nockbox/iris-rs/", features = ["alloc"] }
iris-nockchain-types = { git = "https://github.com/nockbox/iris-rs" }
iris-grpc-proto = { git = "https://github.com/nockbox/iris-rs", features = ["private-api"] }
tonic = { version = "0.12", default-features = false }
iris-crypto = { git = "https://github.com/nockbox/iris-rs" }
bs58 = { version = "0.5", default-features = false }
bitvec = { version = "1.0", default-features = false }
arrayref = "0.3"
num-traits = { version = "0.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
arrayvec = "0.7"
lru = { version = "0.7" }
futures = "0.3"
async-trait = "0.1"
thiserror = "1"
log = "0.4"
tracing = "0.1"
tracing-tracy = { version = "0.11.4", optional = true, features = ["fibers"] }
tracy-client = { version = "=0.18.2", optional = true }
http-body-util = "0.1"
serde-wasm-bindgen = "0.6"
clap = { version = "4.0", features = ["derive"] }

diesel = { version = "2.3", default-features = false, features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.3", default-features = false }
diesel-async = { version = "0.7", default-features = false, features = ["sync-connection-wrapper"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"], optional = true }

tonic-web = { version = "0.12", optional = true }
tokio = { version = "1.42", default-features = false, features = ["sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

wasm-bindgen = { version = "0.2", optional = true }
tonic-web-wasm-client = { version = "0.6", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
tracing-subscriber-wasm = { version = "0.1", optional = true }
tsify = { version = "0.5", default-features = false, features = ["json"], optional = true }
sqlite-wasm-rs = { version = "0.5", optional = true }

[features]
default = []
tokio = ["tokio/full"]
binary = ["tonic-web", "tokio", "tracing-subscriber", "libsqlite3-sys"]
tracy = ["tracing-tracy", "tracy-client"]
wasm = ["wasm-bindgen", "tonic-web-wasm-client", "wasm-bindgen-futures", "tracing-subscriber", "tracing-subscriber-wasm", "tsify", "sqlite-wasm-rs", "getrandom"]

[profile.profiling]
inherits = "release"
debug = true

[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel", version = "2.3", default-features = false, features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", version = "2.3", default-features = false }
